[gd_scene load_steps=4 format=3 uid="uid://dmi76x3hc2fqj"]

[ext_resource type="Script" path="res://Prefabs/PlayerController/PlayerController.gd" id="1_7nk14"]
[ext_resource type="PackedScene" uid="uid://cpkfhoxxqggns" path="res://components/InputComponent/InputComponent.tscn" id="2_6g0i7"]
[ext_resource type="PackedScene" uid="uid://brs5wo4pjx4ae" path="res://Prefabs/PlayerHand/PlayerHand.tscn" id="2_6mrj6"]

[node name="PlayerController" type="Node3D"]
script = ExtResource("1_7nk14")

[node name="IsometricCamera" type="Camera3D" parent="."]
transform = Transform3D(0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, -20, 30, 20)
projection = 1
size = 40.0

[node name="SelectorCast" type="RayCast3D" parent="."]
collision_mask = 9
debug_shape_thickness = 5

[node name="InputComponent" parent="." instance=ExtResource("2_6g0i7")]

[node name="SelectedCard" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, -2.98023e-08, -2.98023e-08, 1, 2.98023e-08, -2.98023e-08, 0, 1, 0, 0, 0)

[node name="PlayerHand" parent="." instance=ExtResource("2_6mrj6")]
transform = Transform3D(0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, -10, -5, 10)

[connection signal="InputHeld" from="InputComponent" to="." method="_on_input_component_input_held"]
[connection signal="InputPressed" from="InputComponent" to="." method="_on_input_component_input_pressed"]
[connection signal="InputReleased" from="InputComponent" to="." method="_on_input_component_input_released"]

[editable path="PlayerHand"]
